format fix and W2 Done

--- a/Work#2/index.html
+++ b/Work#2/index.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
-    
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Main</title>
+  </head>
+  <body>
     <ul>
-        <li><a href="./index.html">Main</a></li>
-        <li><a href="./catalog/catalog.html">Catalog</a></li>
-        <li><a href="#">Contacts</a></li>
+      <li><a class="styleMenu" href="./index.html">Main</a></li>
+      <li><a class="styleMenu" href="./catalog/catalog.html">Catalog</a></li>
+      <li><a class="styleMenu" href="./login.html">SingUp</a></li>
     </ul>
-    <h1>Main Page</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A sit, necessitatibus laudantium facilis sint repellat dolores minima illum accusamus, facere natus architecto? Ex corporis, neque ducimus laudantium accusantium labore tempora!</p>
-    <h2>Welcom to website</h2>
-    <p>Далеко-далеко за словесными горами в стране гласных и согласных живут, рыбные тексты. Наш толку ведущими жаренные раз путь, грамматики до страну там строчка? Диких, коварных первую алфавит дал буквоград над страну безорфографичный.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis tempora suscipit doloremque omnis qui, officiis amet iusto, obcaecati atque aspernatur cupiditate eius totam non. Alias sequi nemo amet quos non.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet ad doloribus recusandae consequuntur facere eum obcaecati nam qui perspiciatis iure? Odit nobis rem possimus laborum beatae recusandae maiores enim nam?</p>
-</body>
+    <h1 class="styleh1">Main Page</h1>
+    <p class="styleP_M">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. A sit,
+      necessitatibus laudantium facilis sint repellat dolores minima illum
+      accusamus, facere natus architecto? Ex corporis, neque ducimus laudantium
+      accusantium labore tempora!
+    </p>
+    <h2 id="stylehWellcome">Welcom to website</h2>
+    <p class="styleP_M">
+      Далеко-далеко за словесными горами в стране гласных и согласных живут,
+      рыбные тексты. Наш толку ведущими жаренные раз путь, грамматики до страну
+      там строчка? Диких, коварных первую алфавит дал буквоград над страну
+      безорфографичный.
+    </p>
+    <p class="styleP_M">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      tempora suscipit doloremque omnis qui, officiis amet iusto, obcaecati
+      atque aspernatur cupiditate eius totam non. Alias sequi nemo amet quos
+      non.
+    </p>
+    <p class="styleP_M">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet ad
+      doloribus recusandae consequuntur facere eum obcaecati nam qui
+      perspiciatis iure? Odit nobis rem possimus laborum beatae recusandae
+      maiores enim nam?
+    </p>
+  </body>
 </html>
