--- a/Work#3/index.html
+++ b/Work#3/index.html
@@ -3,43 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GrowBe</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="#"><img src="" alt="" /></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
+        <a href="#"><img src="./img/header_Logo.png" alt="Logo_header" /></a>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Services</a>
+        <a href="#">Features</a>
+        <a href="#">Team</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
       </nav>
     </header>
     <main>
       <section>
         <div>
-          <h1></h1>
-          <p></p>
+          <h1>SEO & Digital
+            Marketing For Your
+            Website.</h1>
+          <p>
+            Provide all kind of seo services and help to improve
+seo ranking. Globally incubate standards.
+          </p>
           >
+          <div>
+            <button>Start Now</button>
+            <button>Watch Video</button>
+          </div>
         </div>
-        <div>
-          <button></button>
-          <button></button>
-        </div>
-        <img src="" alt="" />
+        <img src="./img/main_image_1.png" alt="Main_image" />
       </section>
     </main>
     <footer>
       <nav>
-        <a href=""><img src="" alt="" /></a>
-        <a href=""><img src="" alt="" /></a>
-        <a href=""><img src="" alt="" /></a>
-        <a href=""><img src="" alt="" /></a>
-        <a href=""><img src="" alt="" /></a>
-        <a href=""><img src="" alt="" /></a>
+        <a href="#"><img src="./img/footer_1.png" alt="Logo_foorer_1" /></a>
+        <a href="#"><img src="./img/footer_2.png" alt="Logo_foorer_2" /></a>
+        <a href="#"><img src="./img/footer_3.png" alt="Logo_foorer_3" /></a>
+        <a href="#"><img src="./img/footer_4.png" alt="Logo_foorer_4" /></a>
+        <a href="#"><img src="./img/footer_5.png" alt="Logo_foorer_5" /></a>
+        <a href="#"><img src="./img/footer_6.png" alt="Logo_foorer_6" /></a>
       </nav>
     </footer>
   </body>
