--- a/Work#3/index.html
+++ b/Work#3/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GrowBe</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
+      <a href="#"><img src="./img/header_Logo.png" alt="Logo_header" /></a>
       <nav>
-        <a href="#"><img src="./img/header_Logo.png" alt="Logo_header" /></a>
         <a href="#">Home</a>
         <a href="#">About Us</a>
         <a href="#">Services</a>
