--- a/Work#3/index.html
+++ b/Work#3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GrowBe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -22,14 +22,11 @@
     <main>
       <section>
         <div>
-          <h1>SEO & Digital
-            Marketing For Your
-            Website.</h1>
+          <h1>SEO & Digital Marketing For Your Website.</h1>
           <p>
-            Provide all kind of seo services and help to improve
-seo ranking. Globally incubate standards.
+            Provide all kind of seo services and help to improve seo ranking.
+            Globally incubate standards.
           </p>
-          >
           <div>
             <button>Start Now</button>
             <button>Watch Video</button>
