--- a/Work#3/index.html
+++ b/Work#3/index.html
@@ -9,41 +9,41 @@
   </head>
   <body>
     <header>
-      <a href="#"><img src="./img/header_Logo.png" alt="Logo_header" /></a>
+      <a href="#"><img class="img_logo" src="./img/header_Logo.png" alt="Logo_header" /></a>
       <nav>
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Services</a>
-        <a href="#">Features</a>
-        <a href="#">Team</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
+        <a class="Menu_Home_style" href="#">Home</a>
+        <a class="Menu_style" href="#">About Us</a>
+        <a class="Menu_style" href="#">Services</a>
+        <a class="Menu_style" href="#">Features</a>
+        <a class="Menu_style" href="#">Team</a>
+        <a class="Menu_style" href="#">Blog</a>
+        <a class="Menu_style" href="#">Contact</a>
       </nav>
     </header>
     <main>
       <section>
         <div>
-          <h1>SEO & Digital Marketing For Your Website.</h1>
-          <p>
+          <h1 class="style_h1">SEO & Digital Marketing For Your Website.</h1>
+          <p class="style_p">
             Provide all kind of seo services and help to improve seo ranking.
             Globally incubate standards.
           </p>
           <div>
-            <button>Start Now</button>
-            <button>Watch Video</button>
+            <button class="style_but_start">Start Now</button>
+            <button class="style_but_wath">Watch Video</button>
           </div>
         </div>
-        <img src="./img/main_image_1.png" alt="Main_image" />
+        <img class="img_main" src="./img/main_image_1.png" alt="Main_image" />
       </section>
     </main>
     <footer>
       <nav>
-        <a href="#"><img src="./img/footer_1.png" alt="Logo_foorer_1" /></a>
-        <a href="#"><img src="./img/footer_2.png" alt="Logo_foorer_2" /></a>
-        <a href="#"><img src="./img/footer_3.png" alt="Logo_foorer_3" /></a>
-        <a href="#"><img src="./img/footer_4.png" alt="Logo_foorer_4" /></a>
-        <a href="#"><img src="./img/footer_5.png" alt="Logo_foorer_5" /></a>
-        <a href="#"><img src="./img/footer_6.png" alt="Logo_foorer_6" /></a>
+        <a href="#"><img class="img_braid_logo" src="./img/footer_1.png" alt="Logo_foorer_1" /></a>
+        <a href="#"><img class="img_braid_logo" src="./img/footer_2.png" alt="Logo_foorer_2" /></a>
+        <a href="#"><img class="img_braid_logo" src="./img/footer_3.png" alt="Logo_foorer_3" /></a>
+        <a href="#"><img class="img_braid_logo" src="./img/footer_4.png" alt="Logo_foorer_4" /></a>
+        <a href="#"><img class="img_braid_logo" src="./img/footer_5.png" alt="Logo_foorer_5" /></a>
+        <a href="#"><img class="img_braid_logo" src="./img/footer_6.png" alt="Logo_foorer_6" /></a>
       </nav>
     </footer>
   </body>
