--- a/Work#3/index.html
+++ b/Work#3/index.html
@@ -14,7 +14,7 @@
         <a class="Menu_Home_style" href="#">Home</a>
         <a class="Menu_style" href="#">About Us</a>
         <a class="Menu_style" href="#">Services</a>
-        <a class="Menu_style" href="#">Features</a>
+        <a class="Menu_style Menu_style_triangyl" href="#">Features</a>
         <a class="Menu_style" href="#">Team</a>
         <a class="Menu_style" href="#">Blog</a>
         <a class="Menu_style" href="#">Contact</a>
