add style conteiner

--- a/Work#3/index.html
+++ b/Work#3/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
-      <a href="#"><img class="img_logo" src="./img/header_Logo.png" alt="Logo_header" /></a>
-      <nav>
+      <nav class="conteiner">
+        <a href="#"><img class="img_logo" src="./img/header_Logo.png" alt="Logo_header" /></a>
         <a class="Menu_Home_style" href="#">Home</a>
         <a class="Menu_style" href="#">About Us</a>
         <a class="Menu_style" href="#">Services</a>
@@ -21,7 +21,7 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="conteiner">
         <div>
           <h1 class="style_h1">SEO & Digital Marketing For Your Website.</h1>
           <p class="style_p">
@@ -37,7 +37,7 @@
       </section>
     </main>
     <footer>
-      <nav>
+      <nav class="conteiner">
         <a href="#"><img class="img_braid_logo" src="./img/footer_1.png" alt="Logo_foorer_1" /></a>
         <a href="#"><img class="img_braid_logo" src="./img/footer_2.png" alt="Logo_foorer_2" /></a>
         <a href="#"><img class="img_braid_logo" src="./img/footer_3.png" alt="Logo_foorer_3" /></a>
