--- a/Work#3/index.html
+++ b/Work#3/index.html
@@ -8,42 +8,42 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <nav class="conteiner">
-        <a href="#"><img class="img_logo" src="./img/header_Logo.png" alt="Logo_header" /></a>
-        <a class="Menu_Home_style" href="#">Home</a>
-        <a class="Menu_style" href="#">About Us</a>
-        <a class="Menu_style" href="#">Services</a>
-        <a class="Menu_style Menu_style_triangyl" href="#">Features</a>
-        <a class="Menu_style" href="#">Team</a>
-        <a class="Menu_style" href="#">Blog</a>
-        <a class="Menu_style" href="#">Contact</a>
+    <header class="header">
+      <nav class="headerContent conteiner">
+        <a href="#"><img class="headerContent_img_logo" src="./img/header_Logo.png" alt="Logo_header" /></a>
+        <a class="headerContent_Home_style" href="#">Home</a>
+        <a class="headerContent_style" href="#">About Us</a>
+        <a class="headerContent_style" href="#">Services</a>
+        <a class="headerContent_style headerContent_style_triangyl" href="#">Features</a>
+        <a class="headerContent_style" href="#">Team</a>
+        <a class="headerContent_style" href="#">Blog</a>
+        <a class="headerContent_style" href="#">Contact</a>
       </nav>
     </header>
-    <main>
-      <section class="conteiner">
+    <main class="main">
+      <section class="mainContent conteiner">
         <div>
-          <h1 class="style_h1">SEO & Digital Marketing For Your Website.</h1>
-          <p class="style_p">
+          <h1 class="mainContent_style_h1">SEO & Digital Marketing For Your Website.</h1>
+          <p class="mainContent_style_p">
             Provide all kind of seo services and help to improve seo ranking.
             Globally incubate standards.
           </p>
           <div>
-            <button class="style_but_start">Start Now</button>
-            <button class="style_but_wath">Watch Video</button>
+            <button class="mainContent_style_but_start">Start Now</button>
+            <button class="mainContent_style_but_wath">Watch Video</button>
           </div>
         </div>
-        <img class="img_main" src="./img/main_image_1.png" alt="Main_image" />
+        <img class="mainContent_img_main" src="./img/main_image_1.png" alt="Main_image" />
       </section>
     </main>
-    <footer>
-      <nav class="conteiner">
-        <a href="#"><img class="img_braid_logo" src="./img/footer_1.png" alt="Logo_foorer_1" /></a>
-        <a href="#"><img class="img_braid_logo" src="./img/footer_2.png" alt="Logo_foorer_2" /></a>
-        <a href="#"><img class="img_braid_logo" src="./img/footer_3.png" alt="Logo_foorer_3" /></a>
-        <a href="#"><img class="img_braid_logo" src="./img/footer_4.png" alt="Logo_foorer_4" /></a>
-        <a href="#"><img class="img_braid_logo" src="./img/footer_5.png" alt="Logo_foorer_5" /></a>
-        <a href="#"><img class="img_braid_logo" src="./img/footer_6.png" alt="Logo_foorer_6" /></a>
+    <footer class="footer">
+      <nav class="footerContent conteiner">
+        <a href="#"><img class="footerContent_img_braid_logo" src="./img/footer_1.png" alt="Logo_foorer_1" /></a>
+        <a href="#"><img class="footerContent_img_braid_logo" src="./img/footer_2.png" alt="Logo_foorer_2" /></a>
+        <a href="#"><img class="footerContent_img_braid_logo" src="./img/footer_3.png" alt="Logo_foorer_3" /></a>
+        <a href="#"><img class="footerContent_img_braid_logo" src="./img/footer_4.png" alt="Logo_foorer_4" /></a>
+        <a href="#"><img class="footerContent_img_braid_logo" src="./img/footer_5.png" alt="Logo_foorer_5" /></a>
+        <a href="#"><img class="footerContent_img_braid_logo" src="./img/footer_6.png" alt="Logo_foorer_6" /></a>
       </nav>
     </footer>
   </body>
