--- a/Work#3/index.html
+++ b/Work#3/index.html
@@ -38,12 +38,12 @@
     </main>
     <footer class="footer">
       <nav class="footerContent conteiner">
-        <a href="#"><img class="footerContent_img_braid_logo" src="./img/footer_1.png" alt="Logo_foorer_1" /></a>
-        <a href="#"><img class="footerContent_img_braid_logo" src="./img/footer_2.png" alt="Logo_foorer_2" /></a>
-        <a href="#"><img class="footerContent_img_braid_logo" src="./img/footer_3.png" alt="Logo_foorer_3" /></a>
-        <a href="#"><img class="footerContent_img_braid_logo" src="./img/footer_4.png" alt="Logo_foorer_4" /></a>
-        <a href="#"><img class="footerContent_img_braid_logo" src="./img/footer_5.png" alt="Logo_foorer_5" /></a>
-        <a href="#"><img class="footerContent_img_braid_logo" src="./img/footer_6.png" alt="Logo_foorer_6" /></a>
+        <a href="#"><img src="./img/footer_1.png" alt="Logo_foorer_1" /></a>
+        <a href="#"><img src="./img/footer_2.png" alt="Logo_foorer_2" /></a>
+        <a href="#"><img src="./img/footer_3.png" alt="Logo_foorer_3" /></a>
+        <a href="#"><img src="./img/footer_4.png" alt="Logo_foorer_4" /></a>
+        <a href="#"><img src="./img/footer_5.png" alt="Logo_foorer_5" /></a>
+        <a href="#"><img src="./img/footer_6.png" alt="Logo_foorer_6" /></a>
       </nav>
     </footer>
   </body>
