--- a/Work#3/index.html
+++ b/Work#3/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <header class="header">
-      <nav class="headerContent conteiner">
+      <div class="conteiner">
         <a href="#"><img class="headerContent_img_logo" src="./img/header_Logo.png" alt="Logo_header" /></a>
+      </div>
+      <nav class="headerContent conteiner">
         <a class="headerContent_Home_style" href="#">Home</a>
         <a class="headerContent_style" href="#">About Us</a>
         <a class="headerContent_style" href="#">Services</a>
