--- a/Work#4/index.html
+++ b/Work#4/index.html
@@ -9,16 +9,18 @@
   </head>
   <body>
     <header class="header">
-      <nav class="headerContent conteiner">
+      <section class="headerContent conteiner">
         <a href="#"><img class="headerContent_img_logo" src="./img/header_Logo.png" alt="Logo_header" /></a>
-        <a class="headerContent_Home_style" href="#">Home</a>
-        <a class="headerContent_style" href="#">About Us</a>
-        <a class="headerContent_style" href="#">Services</a>
-        <a class="headerContent_style headerContent_style_triangyl" href="#">Features</a>
-        <a class="headerContent_style" href="#">Team</a>
-        <a class="headerContent_style" href="#">Blog</a>
-        <a class="headerContent_style" href="#">Contact</a>
-      </nav>
+          <nav class="headerContent_menu">
+            <a class="headerContent_Home_style" href="#">Home</a>
+            <a class="headerContent_style" href="#">About Us</a>
+            <a class="headerContent_style" href="#">Services</a>
+            <a class="headerContent_style headerContent_style_triangyl" href="#">Features</a>
+            <a class="headerContent_style" href="#">Team</a>
+            <a class="headerContent_style" href="#">Blog</a>
+            <a class="headerContent_style" href="#">Contact</a>
+          </nav>
+      </section>
     </header>
     <main class="main">
       <section class="mainContent conteiner">
