--- a/Work#5/index.html
+++ b/Work#5/index.html
@@ -37,16 +37,44 @@
         </div>
         <img class="mainContent_img_main" src="./img/main_image_1.png" alt="Main_image" />
       </section>
+        <nav class="down_logo_Content conteiner">
+          <a class="down_logo_Content_img" href="#"><img src="./img/down_logo_1.png" alt="Logo_foorer_1" /></a>
+          <a class="down_logo_Content_img" href="#"><img src="./img/down_logo_2.png" alt="Logo_foorer_2" /></a>
+          <a class="down_logo_Content_img" href="#"><img src="./img/down_logo_3.png" alt="Logo_foorer_3" /></a>
+          <a class="down_logo_Content_img" href="#"><img src="./img/down_logo_4.png" alt="Logo_foorer_4" /></a>
+          <a class="down_logo_Content_img" href="#"><img src="./img/down_logo_5.png" alt="Logo_foorer_5" /></a>
+          <a class="down_logo_Content_img" href="#"><img src="./img/down_logo_6.png" alt="Logo_foorer_6" /></a>
+        </nav>
+      <section class="features conteiner">
+        <div class="card_features">
+          <img class="features_img" src="./img/features_icon_red.png" alt="icon_red" />
+          <h2 class="features_style_h1">Grow Your Business</h2>
+          <h3 class="features_style_h3">Leverage agile frameworks to provide a robust synopsis for high level overviews.</h3>
+          <h2 class="features_style_h2">Read More...</h2>
+        </div>
+        <div class="card_features">
+          <img class="features_img" src="./img/features_icon_green.png" alt="icon_green" />
+          <h2 class="features_style_h1">Get Quality Ieads</h2>
+          <h3 class="features_style_h3">Leverage agile frameworks to provide a robust synopsis for high level overviews.</h3>
+          <h2 class="features_style_h2">Read More...</h2>
+        </div>
+        <div class="card_features">
+          <img class="features_img" src="./img/features_icon_yeelow.png" alt="icon_yeelow" />
+          <h2 class="features_style_h1">Drive More Sales</h2>
+          <h3 class="features_style_h3">Leverage agile frameworks to provide a robust synopsis for high level overviews.</h3>
+          <h2 class="features_style_h2">Read More...</h2>
+        </div>
+      </section>
+      <section class="services_titel conteiner">
+        <h1 class="services_titel_h1">Why You Should Choose Us.</h1>
+        <h2 class="services_titel_h2">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
+          applications through revolutionary catalysts.</h2> 
+        <section class="services">
+          <div class="services_card"></div>
+          <div class="services_card"></div>
+          <div class="services_card"></div>
+        </section>
+      </section>
     </main>
-    <footer class="footer">
-      <nav class="footerContent conteiner">
-        <a href="#"><img src="./img/footer_1.png" alt="Logo_foorer_1" /></a>
-        <a href="#"><img src="./img/footer_2.png" alt="Logo_foorer_2" /></a>
-        <a href="#"><img src="./img/footer_3.png" alt="Logo_foorer_3" /></a>
-        <a href="#"><img src="./img/footer_4.png" alt="Logo_foorer_4" /></a>
-        <a href="#"><img src="./img/footer_5.png" alt="Logo_foorer_5" /></a>
-        <a href="#"><img src="./img/footer_6.png" alt="Logo_foorer_6" /></a>
-      </nav>
-    </footer>
   </body>
 </html>
