--- a/Work#5/index.html
+++ b/Work#5/index.html
@@ -48,21 +48,27 @@
       <section class="features conteiner">
         <div class="card_features_1">
           <img class="features_img_1" src="" alt="icon_red" />
-          <h2 class="features_style_h1">Grow Your Business</h2>
-          <h3 class="features_style_h3">Leverage agile frameworks to provide a robust synopsis for high level overviews.</h3>
-          <h2 class="features_style_h2">Read More...</h2>
+          <div class="features_text_block">
+            <h1 class="features_style_h1">Grow Your Business</h1>
+            <h2 class="features_style_h2">Leverage agile frameworks to provide a robust synopsis for high level overviews.</h2>
+          </div>
+          <h3 class="features_style_h3">Read More...</h3>
         </div>
         <div class="card_features_2">
           <img class="features_img_2" src="" alt="icon_green" />
-          <h2 class="features_style_h1">Get Quality Ieads</h2>
-          <h3 class="features_style_h3">Leverage agile frameworks to provide a robust synopsis for high level overviews.</h3>
-          <h2 class="features_style_h2">Read More...</h2>
+            <div class="features_text_block">
+              <h1 class="features_style_h1">Get Quality Ieads</h1>
+              <h2 class="features_style_h2">Leverage agile frameworks to provide a robust synopsis for high level overviews.</h2>
+            </div>
+          <h3 class="features_style_h3">Read More...</h3>
         </div>
         <div class="card_features_3">
           <img class="features_img_3" src="" alt="icon_yeelow" />
-          <h2 class="features_style_h1">Drive More Sales</h2>
-          <h3 class="features_style_h3">Leverage agile frameworks to provide a robust synopsis for high level overviews.</h3>
-          <h2 class="features_style_h2">Read More...</h2>
+          <div class="features_text_block">
+            <h1 class="features_style_h1">Drive More Sales</h1>
+            <h2 class="features_style_h2">Leverage agile frameworks to provide a robust synopsis for high level overviews.</h2>
+          </div>
+          <h3 class="features_style_h3">Read More...</h3>
         </div>
       </section>
         <section class="services">
