--- a/Work#6/index.html
+++ b/Work#6/index.html
@@ -1,13 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>THE BRAND</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-    
-</body>
+  </head>
+
+  <body>
+    <header class="menu_head">
+      <nav>
+        <div>
+          <a href="./index.html"
+            ><img src="./img/logo_brand.png" alt="logo_brand" />
+          </a>
+          <button><img src="./img/icon_search.svg" alt="icon_search" /></button>
+        </div>
+        <div>
+          <button><img src="./img/icon_menu.svg" alt="icon_menu" /></button>
+          <button>
+            <img src="./img/icon_profile.svg" alt="icon_profile" />
+          </button>
+          <button><img src="./img/icon_basked.svg" alt="icon_basked" /></button>
+        </div>
+      </nav>
+      <section class="baner_backround">
+        <img src="./img/head_baner_man.png" alt="baner_man" />
+        <div class="left_line">
+          <h1>THE BRAND</h1>
+          <h2>
+            OF LUXERIOUS
+            <span class="baner_color_text">FASHION</span>
+          </h2>
+        </div>
+      </section>
+    </header>
+    <main>
+      <section>
+        <div class="backroud_image_1">
+          <div class="mask">
+            <div>
+              <h3>30% OFF</h3>
+              <h2><span class="baner_color_text">FOR WOMEN</span></h2>
+            </div>
+          </div>
+        </div>
+        <div class="backroud_image_2">
+          <div class="mask">
+            <div>
+              <h3>HOT DEAL</h3>
+              <h2><span class="baner_color_text">FOR MEN</span></h2>
+            </div>
+          </div>
+        </div>
+        <div class="backroud_image_3">
+          <div class="mask">
+            <div>
+              <h3>NEW ARRIVALS</h3>
+              <h2><span class="baner_color_text">FOR KIDS</span></h2>
+            </div>
+          </div>
+        </div>
+        <div class="backroud_image_4">
+          <div class="mask">
+            <div>
+              <h3>LUXIROUS & TRENDY</h3>
+              <h2><span class="baner_color_text">ACCESORIES</span></h2>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <h1>Fetured Items</h1>
+        <h2>Shop for items based on what we featured in this week</h2>
+        <div class="Item_box_image_1">
+          <div>
+            <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
+            <h3 class="text_item_box_h3">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </h3>
+            <h2 class="text_item_box_h2">$52.00</h2>
+          </div>
+        </div>
+        <div class="Item_box_image_2">
+          <div>
+            <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
+            <h3 class="text_item_box_h3">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </h3>
+            <h2 class="text_item_box_h2">$52.00</h2>
+          </div>
+        </div>
+        <div class="Item_box_image_3">
+          <div>
+            <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
+            <h3 class="text_item_box_h3">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </h3>
+            <h2 class="text_item_box_h2">$52.00</h2>
+          </div>
+        </div>
+        <div class="Item_box_image_4">
+          <div>
+            <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
+            <h3 class="text_item_box_h3">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </h3>
+            <h2 class="text_item_box_h2">$52.00</h2>
+          </div>
+        </div>
+        <div class="Item_box_image_5">
+          <div>
+            <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
+            <h3 class="text_item_box_h3">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </h3>
+            <h2 class="text_item_box_h2">$52.00</h2>
+          </div>
+        </div>
+        <div class="Item_box_image_6">
+          <div>
+            <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
+            <h3 class="text_item_box_h3">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </h3>
+            <h2 class="text_item_box_h2">$52.00</h2>
+          </div>
+        </div>
+        <button class="brouse_button">Browse All Product</button>
+      </section>
+    </main>
+  </body>
 </html>
