--- a/Work#6/index.html
+++ b/Work#6/index.html
@@ -37,7 +37,8 @@
 
     <main class="main">
       <section class="first_box">
-        <div class="frst_card_image_1"> <img src="./img/backround_for_women.png" alt="for_women" />
+        <div class="frst_card_image_1"> 
+          <img src="./img/backround_for_women.png" alt="for_women" />
           <div class="image_mask"> 
             <div class="text_card">
               <h3>30% OFF</h3>
@@ -45,7 +46,8 @@
             </div>
           </div>
         </div>
-        <div class="second_card_image_2"> <img src="./img/backround_for_men.png" alt="for_women" />
+        <div class="second_card_image_2"> 
+          <img src="./img/backround_for_men.png" alt="for_man" />
           <div class="image_mask">
             <div class="text_card">
               <h3>HOT DEAL</h3>
@@ -53,7 +55,8 @@
             </div>
           </div>
         </div>
-        <div class="Third_card_image_3">
+        <div class="Third_card_image_3"> 
+          <img src="./img/backround_for_kinds.png" alt="for_kids" />
           <div class="image_mask">
             <div class="text_card">
               <h3>NEW ARRIVALS</h3>
@@ -61,7 +64,8 @@
             </div>
           </div>
         </div>
-        <div class="Four_card_image_4">
+        <div class="Four_card_image_4"> 
+          <img src="./img/backround_accesories.png" alt="for_accesories" />
           <div class="image_mask">
             <div class="text_card">
               <h3>LUXIROUS & TRENDY</h3>
@@ -75,6 +79,7 @@
         <h1 class="title_text_second_box_h1">Fetured Items</h1>
         <h2 class="title_text_second_box_h2">Shop for items based on what we featured in this week</h2>
         <div class="Item_box_image_1">
+          <img src="./img/fetured_items_1.png" alt="item_1" />
           <div>
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
             <h3 class="text_item_box_h3">
@@ -85,6 +90,7 @@
           </div>
         </div>
         <div class="Item_box_image_2">
+          <img src="./img/fetured_items_2.png" alt="item_2" />
           <div>
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
             <h3 class="text_item_box_h3">
@@ -95,6 +101,7 @@
           </div>
         </div>
         <div class="Item_box_image_3">
+          <img src="./img/fetured_items_3.png" alt="item_3" />
           <div>
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
             <h3 class="text_item_box_h3">
@@ -105,6 +112,7 @@
           </div>
         </div>
         <div class="Item_box_image_4">
+          <img src="./img/fetured_items_4.png" alt="item_4" />
           <div>
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
             <h3 class="text_item_box_h3">
@@ -115,6 +123,7 @@
           </div>
         </div>
         <div class="Item_box_image_5">
+          <img src="./img/fetured_items_5.png" alt="item_5" />
           <div>
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
             <h3 class="text_item_box_h3">
@@ -125,6 +134,7 @@
           </div>
         </div>
         <div class="Item_box_image_6">
+          <img src="./img/fetured_items_6.png" alt="item_6" />
           <div>
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
             <h3 class="text_item_box_h3">
