--- a/Work#7/index.html
+++ b/Work#7/index.html
@@ -38,8 +38,8 @@
           alt="baner_man"
         />
         <div class="baner_rigth_line_text">
-          <h1>THE BRAND</h1>
-          <h2>
+          <h1 class="baner_rigth_line_text_h1">THE BRAND</h1>
+          <h2 class="baner_rigth_line_text_h2">
             OF LUXERIOUS
             <span class="head_baner_color_text">FASHION</span>
           </h2>
